// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP On Demand T V Page A11y I can see the skip to content link 1`] = `"U gudub qaybta macluumaadka"`;

exports[`AMP On Demand T V Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP On Demand T V Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP On Demand T V Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=83&p=somali.bbc_somali_tv.tv_programmes.w13xttqt.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Apips%3Aw13xttqt]&x2=[amp]&x3=[news-somali]&x4=[so]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-episode]&x8=[simorgh]&x9=[Caawa%2520Iyo%2520Caalamka%2520-%2520BBC%2520News%2520Somali]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP On Demand T V Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "player-episode",
    "domain": "test.bbc.co.uk",
    "sections": "Somali, Somali - TV",
    "title": "Caawa Iyo Caalamka - BBC News Somali",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP On Demand T V Page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP On Demand T V Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Somali",
  "url": "/somali",
}
`;

exports[`AMP On Demand T V Page Footer Anchors should match text and url 2`] = `
{
  "text": "Sababta aad ku aamini kartid BBC News",
  "url": "https://www.bbc.com/somali/hayadeed-49283375",
}
`;

exports[`AMP On Demand T V Page Footer Anchors should match text and url 3`] = `
{
  "text": "Shuruucda isticmaalka",
  "url": "https://www.bbc.com/somali/hayadeed-37098011",
}
`;

exports[`AMP On Demand T V Page Footer Anchors should match text and url 4`] = `
{
  "text": "Ku saabsan BBC",
  "url": "https://www.bbc.com/somali/hayadeed-37098081",
}
`;

exports[`AMP On Demand T V Page Footer Anchors should match text and url 5`] = `
{
  "text": "Shuruucda xogta gaarka ah",
  "url": "https://www.bbc.com/somali/hayadeed-37098082",
}
`;

exports[`AMP On Demand T V Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP On Demand T V Page Footer Anchors should match text and url 7`] = `
{
  "text": "La xiriir BBC",
  "url": "https://www.bbc.co.uk/somali/send/u50853709",
}
`;

exports[`AMP On Demand T V Page Footer Anchors should match text and url 8`] = `
{
  "text": "Akhri xogta ku saabsan sida aan u abaarno bogagga dibadda.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP On Demand T V Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/somali"`;

exports[`AMP On Demand T V Page Footer Paragraphs should match text 1`] = `"© 2024 BBC. BBC masuul kama ahan macluumadka bogagga kale ee dibadda. Akhri xogta ku saabsan sida aan u abaarno bogagga dibadda."`;

exports[`AMP On Demand T V Page Header I can see the branding 1`] = `"BBC News, Somali"`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 1`] = `
{
  "text": "War",
  "url": "/somali",
}
`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 2`] = `
{
  "text": "Ganacsi",
  "url": "/somali/topics/c2dwqd32v4yt",
}
`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 3`] = `
{
  "text": "Cayaaraha",
  "url": "/somali/topics/cpzd4zj1pn2t",
}
`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 4`] = `
{
  "text": "Muuqaal",
  "url": "/somali/topics/c7pl4k5r9xxt",
}
`;

exports[`AMP On Demand T V Page Header Navigation link should match text and url 5`] = `
{
  "text": "Barnaamijyada Idaacadda",
  "url": "/somali/topics/cn6rqlrkm0pt",
}
`;

exports[`AMP On Demand T V Page I can see the brand title 1`] = `"Caawa Iyo Caalamka"`;

exports[`AMP On Demand T V Page I can see the episode summary 1`] = `"Kala soco telefishinka BBC News Somali 30 daqiiqo oo isugu jira warar, wareysiyo & faallooyin ku saabsan Soomaaliya iyo Caalamka"`;

exports[`AMP On Demand T V Page I can see the episode title 1`] = `"8 Disembar 2020"`;

exports[`AMP On Demand T V Page Main heading should match text 1`] = `"Caawa Iyo Caalamka, 8 Disembar 2020"`;

exports[`AMP On Demand T V Page Media Player a11y assistive technology can read the media player title 1`] = `"Ciyaaridda Muuqaalka"`;

exports[`AMP On Demand T V Page Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/media/somali/bbc_somali_tv/w172xcmygv61j1y/so/amp?morph_env=live"`;

exports[`AMP On Demand T V Page Recent Episodes List items should match text and url 1`] = `
{
  "text": "26:30Muuqaal, Caawa Iyo Caalamka, 7 Disembar 2020, Muddada 26,30",
  "url": "/somali/bbc_somali_tv/tv/w172xcmygv5ym4v",
}
`;

exports[`AMP On Demand T V Page Recent Episodes List items should match text and url 2`] = `
{
  "text": "26:30Muuqaal, Caawa Iyo Caalamka, 4 Disembar 2020, Muddada 26,30",
  "url": "/somali/bbc_somali_tv/tv/w172xcmy3kwk25d",
}
`;

exports[`AMP On Demand T V Page Recent Episodes List items should match text and url 3`] = `
{
  "text": "26:30Muuqaal, Caawa Iyo Caalamka, 3 Disembar 2020, Muddada 26,30",
  "url": "/somali/bbc_somali_tv/tv/w172xcmy3kwg589",
}
`;

exports[`AMP On Demand T V Page Recent Episodes List items should match text and url 4`] = `
{
  "text": "26:30Muuqaal, Caawa Iyo Caalamka, 2 Disembar 2020, Muddada 26,30",
  "url": "/somali/bbc_somali_tv/tv/w172xcmy3kwc8c6",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/somali/images/icons/icon-192x192.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/somali/images/icons/icon-72x72.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/somali/images/icons/icon-96x96.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/somali/images/icons/icon-128x128.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/somali/images/icons/icon-144x144.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/somali/images/icons/icon-152x152.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/somali/images/icons/icon-180x180.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/somali/images/icons/icon-192x192.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/somali/images/icons/icon-384x384.png",
}
`;

exports[`AMP On Demand T V Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/somali/images/icons/icon-512x512.png",
}
`;

exports[`AMP On Demand T V Page SEO Canonical link 1`] = `"http://localhost:7080/somali/bbc_somali_tv/tv_programmes/w13xttqt"`;

exports[`AMP On Demand T V Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP On Demand T V Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP On Demand T V Page SEO Heading level 1 1`] = `"Caawa Iyo Caalamka, 8 Disembar 2020"`;

exports[`AMP On Demand T V Page SEO Lang attribute 1`] = `"so"`;

exports[`AMP On Demand T V Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/somali.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "so",
        "name": "Somali",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/somali/bbc_somali_tv/tv_programmes/w13xttqt",
        "@type": "WebPage",
        "name": "Caawa Iyo Caalamka",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/somali.png",
          "width": 1024,
        },
        "name": "BBC News Somali",
        "publishingPrinciples": "https://www.bbc.com/somali/hayadeed-49283375",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/somali.png",
      "url": "http://localhost:7080/somali/bbc_somali_tv/tv_programmes/w13xttqt",
    },
    {
      "@type": "VideoObject",
      "description": "Kala soco telefishinka BBC News Somali 30 daqiiqo oo isugu jira warar, wareysiyo & faallooyin ku saabsan Soomaaliya iyo Caalamka",
      "duration": "PT26M30S",
      "embedURL": "https://polling.test.bbc.co.uk/ws/av-embeds/media/somali/bbc_somali_tv/w172xcmygv61j1y/so/amp?morph_env=live",
      "name": "Caawa Iyo Caalamka",
      "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p06hm27g.png",
      "uploadDate": "2020-12-08T00:00:00.000Z",
    },
  ],
}
`;

exports[`AMP On Demand T V Page SEO OG description 1`] = `"Kala soco telefishinka BBC News Somali 30 daqiiqo oo isugu jira warar, wareysiyo & faallooyin ku saabsan Soomaaliya iyo Caalamka"`;

exports[`AMP On Demand T V Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/somali.png"`;

exports[`AMP On Demand T V Page SEO OG image alt 1`] = `"BBC News Somali"`;

exports[`AMP On Demand T V Page SEO OG locale 1`] = `"so-SO"`;

exports[`AMP On Demand T V Page SEO OG site name 1`] = `"BBC News Somali"`;

exports[`AMP On Demand T V Page SEO OG title 1`] = `"Caawa Iyo Caalamka - BBC News Somali"`;

exports[`AMP On Demand T V Page SEO OG type 1`] = `"website"`;

exports[`AMP On Demand T V Page SEO OG url 1`] = `"http://localhost:7080/somali/bbc_somali_tv/tv_programmes/w13xttqt"`;

exports[`AMP On Demand T V Page SEO Page title 1`] = `"Caawa Iyo Caalamka - BBC News Somali"`;

exports[`AMP On Demand T V Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP On Demand T V Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP On Demand T V Page SEO Twitter creator 1`] = `"@bbcsomali"`;

exports[`AMP On Demand T V Page SEO Twitter description 1`] = `"Kala soco telefishinka BBC News Somali 30 daqiiqo oo isugu jira warar, wareysiyo & faallooyin ku saabsan Soomaaliya iyo Caalamka"`;

exports[`AMP On Demand T V Page SEO Twitter image alt 1`] = `"BBC News Somali"`;

exports[`AMP On Demand T V Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/somali.png"`;

exports[`AMP On Demand T V Page SEO Twitter site 1`] = `"@bbcsomali"`;

exports[`AMP On Demand T V Page SEO Twitter title 1`] = `"Caawa Iyo Caalamka - BBC News Somali"`;

exports[`AMP On Demand T V Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `"Caawa Iyo Caalamka, 8 Disembar 2020"`;
